@@ -1,92 +1,130 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	
-	<artifactId>artevolver-core</artifactId>
-	<packaging>jar</packaging>
-	
-	<name>artevolver.core</name>
+    <modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>com.rndmodgames</groupId>
-		<artifactId>artevolver</artifactId>
-		<version>3.0.0-SNAPSHOT</version>
-	</parent>
+    <artifactId>artevolver-core</artifactId>
+    <packaging>jar</packaging>
 
-	<properties>
-		<sonar.tests>${project.basedir}/src/test/</sonar.tests>
-	</properties>
+    <name>artevolver.core</name>
 
-	<build>
-		<sourceDirectory>\${basedir}/src/main/java</sourceDirectory>
-		<outputDirectory>\${basedir}/target/classes</outputDirectory>
-		<resources>
-			<resource>
-				<directory>\${basedir}/src/main/resources</directory>
-				<excludes>
-					<exclude>**/*java</exclude>
-					<exclude>**/*SVN</exclude>
-				</excludes>
-				<filtering>true</filtering>
-			</resource>
-		</resources>
-		<testResources>
-			<testResource>
-				<directory>\${basedir}/src/test/resources</directory>
-				<filtering>true</filtering>
-			</testResource>
-		</testResources>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<configuration>
-					<archive>
-						<manifest>
-							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-						</manifest>
-						<manifestEntries>
-							<Implementation-Build>${buildNumber}</Implementation-Build>
-						</manifestEntries>
-					</archive>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+    <parent>
+        <groupId>com.rndmodgames</groupId>
+        <artifactId>artevolver</artifactId>
+        <version>3.0.0-SNAPSHOT</version>
+    </parent>
 
-	<dependencies>
-		
-		<!-- https://mvnrepository.com/artifact/com.badlogicgames.gdx/gdx-backend-lwjgl -->
-		<dependency>
-		    <groupId>com.badlogicgames.gdx</groupId>
-		    <artifactId>gdx-backend-lwjgl</artifactId>
-		    <version>1.9.13</version>
-		</dependency>
-		
-		<dependency>
+    <build>
+        <sourceDirectory>\${basedir}/src/main/java</sourceDirectory>
+        <outputDirectory>\${basedir}/target/classes</outputDirectory>
+        <resources>
+            <resource>
+                <directory>\${basedir}/src/main/resources</directory>
+                <excludes>
+                    <exclude>**/*java</exclude>
+                    <exclude>**/*SVN</exclude>
+                </excludes>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+        <testResources>
+            <testResource>
+                <directory>\${basedir}/src/test/resources</directory>
+                <filtering>true</filtering>
+            </testResource>
+        </testResources>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <release>17</release>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                        </manifest>
+                        <manifestEntries>
+                            <Implementation-Build>${buildNumber}</Implementation-Build>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M6</version>
+                
+                <!--
+                <configuration>
+                    <forkCount>0</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-Xmx2048m -XX:MaxPermSize=512m</argLine>
+                </configuration>
+                -->
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>3.0.0-M6</version>
+            </plugin>
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.9.1.2184</version>
+            </plugin> 
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>${jacoco.version}</version>
+                <executions>
+                    <execution>
+                        <id>prepare-agent</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
+    <dependencies>
+
+        <!-- https://mvnrepository.com/artifact/com.badlogicgames.gdx/gdx-backend-lwjgl -->
+        <dependency>
+            <groupId>com.badlogicgames.gdx</groupId>
+            <artifactId>gdx-backend-lwjgl</artifactId>
+            <version>1.9.13</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.badlogicgames.gdx</groupId>
             <artifactId>gdx-platform</artifactId>
             <version>1.9.13</version>
             <classifier>natives-desktop</classifier>
         </dependency>
-        
+
         <!-- https://mvnrepository.com/artifact/com.kotcrab.vis/vis-ui -->
-		<dependency>
-		    <groupId>com.kotcrab.vis</groupId>
-		    <artifactId>vis-ui</artifactId>
-		    <version>1.4.8</version>
-<!-- 		    <version>1.4.9-SNAPSHOT</version> -->
-		</dependency>
-        
-        
-	</dependencies>
+        <dependency>
+            <groupId>com.kotcrab.vis</groupId>
+            <artifactId>vis-ui</artifactId>
+            <version>1.4.8</version>
+            <!-- 		    <version>1.4.9-SNAPSHOT</version> -->
+        </dependency>
+
+
+    </dependencies>
 </project>
